--- a/openstack/oslo.privsep/oslo.privsep.spec.j2
+++ b/openstack/oslo.privsep/oslo.privsep.spec.j2
@@ -12,24 +12,22 @@ Group:          Development/Languages/Python
 URL:            https://launchpad.net/{{ pypi_name }}
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('cffi') }}
-BuildRequires:  {{ py2pkg('devel') }}
-BuildRequires:  {{ py2pkg('enum34') }}
-BuildRequires:  {{ py2pkg('eventlet') }}
-BuildRequires:  {{ py2pkg('greenlet') }}
-BuildRequires:  {{ py2pkg('mock') }}
-BuildRequires:  {{ py2pkg('msgpack') }}
-BuildRequires:  {{ py2pkg('openstackdocstheme') }}
-BuildRequires:  {{ py2pkg('oslo.config') }}
-BuildRequires:  {{ py2pkg('oslo.i18n') }}
-BuildRequires:  {{ py2pkg('oslo.log') }}
-BuildRequires:  {{ py2pkg('oslo.utils') }}
-BuildRequires:  {{ py2pkg('oslotest') }}
-BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('setuptools') }}
+BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('Sphinx', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('cffi', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('eventlet', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('greenlet', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('msgpack', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('openstackdocstheme', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslo.config', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslo.i18n', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslo.log', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('setuptools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('cffi') }}
-Requires:       {{ py2pkg('enum34') }}
 Requires:       {{ py2pkg('eventlet') }}
 Requires:       {{ py2pkg('greenlet') }}
 Requires:       {{ py2pkg('msgpack') }}
@@ -38,15 +36,28 @@ Requires:       {{ py2pkg('oslo.i18n') }}
 Requires:       {{ py2pkg('oslo.log') }}
 Requires:       {{ py2pkg('oslo.utils') }}
 BuildArch:      noarch
+%ifpython2
+BuildRequires:  {{ py2pkg('enum34') }}
+Requires:       {{ py2pkg('enum34') }}
+%endif
+%if 0%{?suse_version}
+Requires(post): update-alternatives
+Requires(postun): update-alternatives
+%else
+# on RDO, update-alternatives is in chkconfig
+Requires(post): chkconfig
+Requires(postun): chkconfig
+%endif
+%python_subpackages
 
 %description
 OpenStack library for privilege separation
 
-%package doc
+%package -n {{ py2name() }}-doc
 Summary:        oslo.privsep documentation
 Requires:       %{name} = %{version}
 
-%description doc
+%description -n {{ py2name() }}-doc
 Documentation for oslo.privsep
 
 %prep
@@ -55,31 +66,35 @@ Documentation for oslo.privsep
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
-%py2_build
+%python_build
 # generate html docs
 %{__python2} setup.py build_sphinx
 # remove the sphinx-build leftovers
-rm -rf html/.{doctrees,buildinfo}
+rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
-%py2_install
+%python_install
+%python_clone -a %{buildroot}%{_bindir}/privsep-helper
+
+%post
+%python_install_alternative privsep-helper
+
+%postun
+%python_uninstall_alternative privsep-helper
 
 %check
-# FIXME: Disable tests failing in Fuel CI
-# https://review.openstack.org/#/c/340524/
-# Temporarily blacklist failing test
-testr list-tests | \
-grep -v oslo_privsep.tests.test_daemon.TestDaemon.test_drop_privs > tests
-PYTHONPATH=. %{__python2} setup.py testr --testr-args "--load-list tests"
+%{python_expand rm -rf .testrepository
+PYTHONPATH=. PYTHON=$python $python setup.py testr
+}
 
-%files
+%files %{python_files}
 %doc README.rst
 %license LICENSE
-%{_bindir}/privsep-helper
-%{python2_sitelib}/oslo_privsep
-%{python2_sitelib}/{{ pypi_name }}-*-py?.?.egg-info
+%python_alternative %{_bindir}/privsep-helper
+%{python_sitelib}/oslo_privsep
+%{python_sitelib}/{{ pypi_name }}-*-py?.?.egg-info
 
-%files doc
+%files -n {{ py2name() }}-doc
 %doc doc/build/html
 
 %changelog
