horizon: avoid ignore-files option
One of the recent django updates seems to have broken
this parameter. Avoid it

Change-Id: I43699ba3d83121752e80c671e2d8f21c5d6c60c9

--- a/openstack/horizon/horizon.spec.j2
+++ b/openstack/horizon/horizon.spec.j2
@@ -201,7 +201,8 @@ popd
 %{py2_build}
 
 %check
-python manage.py test horizon --settings=horizon.test.settings --ignore-files="(test_checks|test_hacking|firefox_binary|webdriver|pull_catalog)"
+rm horizon/test/unit/hacking/test_checks.py
+python manage.py test horizon --settings=horizon.test.settings
 # TODO
 # python manage.py test openstack_dashboard --settings=openstack_dashboard.test.settings --exclude-dir=openstack_dashboard/test/integration_tests
 
