--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -1,6 +1,6 @@
 %global sname keystoneauth1
 Name:           {{ py2name('keystoneauth1') }}
-Version:        3.5.0
+Version:        3.9.0
 Release:        0
 Summary:        OpenStack authenticating tools
 License:        {{ license('Apache-2.0') }}
@@ -15,6 +15,7 @@ BuildRequires:  {{ py2pkg('iso8601', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('lxml', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('mock', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oauthlib', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('os-service-types', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('os-testr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.config', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
@@ -30,6 +31,7 @@ Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('iso8601') }}
 Requires:       {{ py2pkg('lxml') }}
 Requires:       {{ py2pkg('oauthlib') }}
+Requires:       {{ py2pkg('os-service-types') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('requests-kerberos') }}
 Requires:       {{ py2pkg('six') }}
