--- a/openstack/os-traits/os-traits.spec.j2
+++ b/openstack/os-traits/os-traits.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'os-traits' %}
-{% set upstream_version = upstream_version('0.6.0') %}
+{% set upstream_version = upstream_version('0.9.0') %}
 {% set rpm_release = '1' %}
 
 Name:           {{ py2name() }}
@@ -15,7 +15,7 @@ BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
-BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('stestr') }}
 BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('pbr') }}
@@ -56,7 +56,7 @@ rm -rf html/.{doctrees,buildinfo}
 %{py2_install}
 
 %check
-%{__python2} setup.py test
+stestr run
 
 %files
 %doc README.rst ChangeLog
