cinder: add cursive dependencies
Change-Id: I3b70116958577eed543a1cda63603bd511688e5c

--- a/openstack/cinder/cinder.spec.j2
+++ b/openstack/cinder/cinder.spec.j2
@@ -27,6 +27,7 @@ BuildRequires:  {{ py2pkg('SQLAlchemy') }}
 BuildRequires:  {{ py2pkg('python-barbicanclient') }}
 BuildRequires:  {{ py2pkg('castellan') }}
 BuildRequires:  {{ py2pkg('cryptography') }}
+BuildRequires:  {{ py2pkg('cursive') }}
 BuildRequires:  {{ py2pkg('ddt') }}
 BuildRequires:  {{ py2pkg('decorator') }}
 BuildRequires:  {{ py2pkg('defusedxml') }}
@@ -102,6 +103,7 @@ Requires:       {{ py2pkg('WebOb') }}
 Requires:       {{ py2pkg('python-barbicanclient') }}
 Requires:       {{ py2pkg('castellan') }}
 Requires:       {{ py2pkg('cryptography') }}
+Requires:       {{ py2pkg('cursive') }}
 Requires:       {{ py2pkg('decorator') }}
 Requires:       {{ py2pkg('defusedxml') }}
 Requires:       {{ py2pkg('enum34') }}
