monasca-transform: adjust filelist for current master
The Readme.md was renamed to readme.rst

Change-Id: I1b0f489ca8dee6f748e540ee4bd41365f7c2dcf6

--- a/openstack/monasca-transform/monasca-transform.spec.j2
+++ b/openstack/monasca-transform/monasca-transform.spec.j2
@@ -154,7 +154,7 @@ ostestr
 
 %files
 %license LICENSE
-%doc README.md ChangeLog
+%doc README.rst ChangeLog
 %dir %attr(-, root, %{groupname}) %{_sysconfdir}/monasca
 %config(noreplace) %attr(0640, root, %{groupname}) %{_sysconfdir}/monasca-transform.conf
 %{_unitdir}/%{name}.service
