--- a/openstack/oslo.messaging/oslo.messaging.spec.j2
+++ b/openstack/oslo.messaging/oslo.messaging.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'oslo.messaging' %}
-{% set upstream_version = upstream_version('6.5.0') %}
+{% set upstream_version = upstream_version('8.1.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -43,9 +43,9 @@ BuildRequires:  {{ py2pkg('python-subunit', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pyzmq', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('redis', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('six', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('stevedore', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('tenacity', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('testrepository', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('PyYAML') }}
@@ -132,9 +132,7 @@ rm -rf build/sphinx/html/.{doctrees,buildinfo}
 %python_uninstall_alternative oslo-messaging-send-notification
 
 %check
-%{python_expand rm -rf .testrepository
-PYTHON=$python $python setup.py testr
-}
+%python_exec -m stestr.cli run
 
 %files %python_files
 %license LICENSE
