Update pypi url to new url
Pypi url changed from [1] to [2]

[1] https://pypi.python.org/pypi/<package>
[2] https://pypi.org/project/<package>

Change-Id: I5c4dd6ecf93c1d2d4755237f6bf771e305fe380d

--- a/openstack/pbr/pbr.spec.j2
+++ b/openstack/pbr/pbr.spec.j2
@@ -9,7 +9,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        Python Build Reasonableness
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://pypi.python.org/pypi/pbr
+URL:            https://pypi.org/project/pbr
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
