Default to secure http
Most servers meanwhile default to secure http, so prefering
to link those over plain http (better default, and saves
one redirect)

Change-Id: I0a7f31e000f8c0aedaae5e42d9b522aca4d8a814

--- a/openstack/castellan/castellan.spec.j2
+++ b/openstack/castellan/castellan.spec.j2
@@ -9,7 +9,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        Generic Key Manager interface for OpenStack
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/castellan
+URL:            https://launchpad.net/castellan
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('python-barbicanclient', py_versions=['py2', 'py3']) }}
