--- a/openstack/cinder/cinder.spec.j2
+++ b/openstack/cinder/cinder.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'cinder' %}
-{% set source = fetch_source('http://tarballs.openstack.org/cinder/cinder-master.tar.gz') %}
+{% set source = fetch_source('https://tarballs.openstack.org/cinder/cinder-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 %global with_doc 1
