--- a/openstack/freezer-web-ui/freezer-web-ui.spec.j2
+++ b/openstack/freezer-web-ui/freezer-web-ui.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'freezer-web-ui' %}
-{% set source = fetch_source('http://tarballs.openstack.org/freezer-web-ui/freezer-web-ui-master.tar.gz') %}
+{% set source = fetch_source('https://tarballs.openstack.org/freezer-web-ui/freezer-web-ui-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
