--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'keystone' %}
-{% set source = fetch_source('http://tarballs.openstack.org/keystone/keystone-master.tar.gz') %}
+{% set source = fetch_source('https://tarballs.openstack.org/keystone/keystone-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 %if 0%{?rhel} || 0%{?fedora}
@@ -118,7 +118,7 @@ Requires:       {{ py2pkg('python-ldap', py_versions=['py3']) }}
 
 %description -n   python3-{{ pypi_name }}
 Keystone is a Python implementation of the OpenStack
-(http://docs.openstack.org/developer/keystone/) identity service API.
+(https://docs.openstack.org/developer/keystone/) identity service API.
 This package contains the Keystone Python library.
 
 %package -n python3-{{ pypi_name }}-tests
@@ -128,7 +128,7 @@ Provides:       python-keystone-tests = %{epoch}:%{version}-%{release}
 
 %description -n python3-{{ pypi_name }}-tests
 Keystone is a Python implementation of the OpenStack
-(http://docs.openstack.org/developer/keystone/) identity service API.
+(https://docs.openstack.org/developer/keystone/) identity service API.
 
 This package contains the Keystone test files.
 
