--- a/openstack/mox3/mox3.spec.j2
+++ b/openstack/mox3/mox3.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        An unofficial port of the Google mox framework to Python 3
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://bugs.launchpad.net/python-mox3
+URL:            https://bugs.launchpad.net/python-mox3
 Source0:        https://files.pythonhosted.org/packages/source/m/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
