--- a/openstack/neutron-vpnaas-dashboard/neutron-vpnaas-dashboard.spec.j2
+++ b/openstack/neutron-vpnaas-dashboard/neutron-vpnaas-dashboard.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'neutron-vpnaas-dashboard' %}
-{% set source = fetch_source('http://tarballs.openstack.org/neutron-vpnaas-dashboard/neutron-vpnaas-dashboard-master.tar.gz') %}
+{% set source = fetch_source('https://tarballs.openstack.org/neutron-vpnaas-dashboard/neutron-vpnaas-dashboard-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
