--- a/openstack/neutron/neutron.spec.j2
+++ b/openstack/neutron/neutron.spec.j2
@@ -12,7 +12,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        OpenStack Networking Service
 License:        {{ license('Apache-2.0') }}
 URL:            https://launchpad.net/neutron
-Source0:        http://tarballs.openstack.org/%{sname}/%{sname}-{{upstream_version}}.tar.gz
+Source0:        https://tarballs.openstack.org/%{sname}/%{sname}-{{upstream_version}}.tar.gz
 Source1:        openstack-neutron.logrotate
 Source2:        neutron-sudoers
 Source3:        neutron-server.service
