--- a/openstack/osc-lib/osc-lib.spec.j2
+++ b/openstack/osc-lib/osc-lib.spec.j2
@@ -9,7 +9,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        OpenStackClient Library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://docs.openstack.org/developer/osc-lib
+URL:            https://docs.openstack.org/developer/osc-lib
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
