--- a/openstack/oslo.db/oslo.db.spec.j2
+++ b/openstack/oslo.db/oslo.db.spec.j2
@@ -54,9 +54,9 @@ BuildArch:      noarch
 %description
 The OpenStack Oslo database handling library. Provides database connectivity
 to the different backends and helper utils.
-* Documentation: http://docs.openstack.org/developer/oslo.db
+* Documentation: https://docs.openstack.org/developer/oslo.db
 * Source: http://git.openstack.org/cgit/openstack/oslo.db
-* Bugs: http://bugs.launchpad.net/oslo
+* Bugs: https://bugs.launchpad.net/oslo
 
 %package -n {{ py2name() }}-doc
 Summary:        Documentation for the Oslo database handling library
