--- a/openstack/python-neutronclient/python-neutronclient.spec.j2
+++ b/openstack/python-neutronclient/python-neutronclient.spec.j2
@@ -9,7 +9,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        Python API and CLI for OpenStack Neutron
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/%{name}
+URL:            https://launchpad.net/%{name}
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
