--- a/openstack/python-oneviewclient/python-oneviewclient.spec.j2
+++ b/openstack/python-oneviewclient/python-oneviewclient.spec.j2
@@ -4,7 +4,7 @@ Release:        0
 Summary:        Python API and CLI for OpenStack Oneview
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/%{name}
+URL:            https://launchpad.net/%{name}
 Source0:        https://files.pythonhosted.org/packages/source/p/%{name}/%{name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('mock') }}
