--- a/openstack/vmware-nsx/vmware-nsx.spec.j2
+++ b/openstack/vmware-nsx/vmware-nsx.spec.j2
@@ -9,7 +9,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        VMware-NSX family of Neutron plugins
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/vmware-nsx
+URL:            https://launchpad.net/vmware-nsx
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('neutron-lib') }}
