--- a/openstack/vmware-nsxlib/vmware-nsxlib.spec.j2
+++ b/openstack/vmware-nsxlib/vmware-nsxlib.spec.j2
@@ -9,7 +9,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        VMware NSX python library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/vmware-nsxlib
+URL:            https://launchpad.net/vmware-nsxlib
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('neutron-lib') }}
