--- a/openstack/ceilometermiddleware/ceilometermiddleware.spec.j2
+++ b/openstack/ceilometermiddleware/ceilometermiddleware.spec.j2
@@ -9,7 +9,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        A library for metric and event data generation for Ceilometer
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://docs.openstack.org/developer/ceilometermiddleware
+URL:            https://docs.openstack.org/developer/ceilometermiddleware
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('betamax') }}
