--- a/openstack/designate-tempest-plugin/designate-tempest-plugin.spec.j2
+++ b/openstack/designate-tempest-plugin/designate-tempest-plugin.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'designate-tempest-plugin' %}
 {% set rpm_release = '1' %}
-{% set source=fetch_source('http://tarballs.openstack.org/designate-tempest-plugin/designate-tempest-plugin-master.tar.gz') %}
+{% set source=fetch_source('https://tarballs.openstack.org/designate-tempest-plugin/designate-tempest-plugin-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 
 %global sname designate-tempest-plugin
