--- a/openstack/freezer-tempest-plugin/freezer-tempest-plugin.spec.j2
+++ b/openstack/freezer-tempest-plugin/freezer-tempest-plugin.spec.j2
@@ -1,6 +1,6 @@
 {% set pypi_name = 'freezer-tempest-plugin' %}
 {% set rpm_release = '1' %}
-{% set source=fetch_source('http://tarballs.openstack.org/freezer-tempest-plugin/freezer-tempest-plugin-master.tar.gz') %}
+{% set source=fetch_source('https://tarballs.openstack.org/freezer-tempest-plugin/freezer-tempest-plugin-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 
 %global sname freezer_tempest_plugin
