--- a/openstack/glance/glance.spec.j2
+++ b/openstack/glance/glance.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'glance' %}
-{% set source = fetch_source('http://tarballs.openstack.org/glance/glance-master.tar.gz') %}
+{% set source = fetch_source('https://tarballs.openstack.org/glance/glance-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 %global with_doc 1
