--- a/openstack/ironic-lib/ironic-lib.spec.j2
+++ b/openstack/ironic-lib/ironic-lib.spec.j2
@@ -4,7 +4,7 @@ Release:        0
 Summary:        Ironic Common Libraries
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://docs.openstack.org/developer/ironic-lib/
+URL:            https://docs.openstack.org/developer/ironic-lib/
 Source0:        https://files.pythonhosted.org/packages/source/i/ironic-lib/ironic-lib-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
