--- a/openstack/monasca-tempest-plugin/monasca-tempest-plugin.spec.j2
+++ b/openstack/monasca-tempest-plugin/monasca-tempest-plugin.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'monasca-tempest-plugin' %}
-{% set source=fetch_source('http://tarballs.openstack.org/monasca-tempest-plugin/monasca-tempest-plugin-master.tar.gz') %}
+{% set source=fetch_source('https://tarballs.openstack.org/monasca-tempest-plugin/monasca-tempest-plugin-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
