--- a/openstack/murano-pkg-check/murano-pkg-check.spec.j2
+++ b/openstack/murano-pkg-check/murano-pkg-check.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        Murano package validator tool
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://docs.openstack.org/developer/murano/
+URL:            https://docs.openstack.org/developer/murano/
 Source0:        https://files.pythonhosted.org/packages/source/m/murano-pkg-check/murano-pkg-check-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyYAML') }}
