--- a/openstack/neutron-lib/neutron-lib.spec.j2
+++ b/openstack/neutron-lib/neutron-lib.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        OpenStack Neutron library
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://docs.openstack.org/developer/neutron-lib/
+URL:            https://docs.openstack.org/developer/neutron-lib/
 Source0:        https://files.pythonhosted.org/packages/source/n/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('SQLAlchemy') }}
