--- a/openstack/python-masakariclient/python-masakariclient.spec.j2
+++ b/openstack/python-masakariclient/python-masakariclient.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        Python API and CLI for OpenStack Masakari
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/%{name}
+URL:            https://launchpad.net/%{name}
 Source0:        https://files.pythonhosted.org/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PrettyTable') }}
