--- a/openstack/python-vitrageclient/python-vitrageclient.spec.j2
+++ b/openstack/python-vitrageclient/python-vitrageclient.spec.j2
@@ -9,7 +9,7 @@ Release:        {{ py2rpmrelease() }}
 Summary:        Python API and CLI for OpenStack Vitrage
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/%{name}
+URL:            https://launchpad.net/%{name}
 Source0:        https://pypi.io/packages/source/p/%{name}/%{name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('cliff', py_versions=['py2', 'py3']) }}
