--- a/openstack/python-zaqarclient/python-zaqarclient.spec.j2
+++ b/openstack/python-zaqarclient/python-zaqarclient.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        Client Library for OpenStack Zaqar Queueing API
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/%{sname}
+URL:            https://launchpad.net/%{sname}
 Source0:        https://files.pythonhosted.org/packages/source/p/%{name}/%{name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('ddt') }}
