--- a/openstack/renderspec/renderspec.spec.j2
+++ b/openstack/renderspec/renderspec.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        Generate spec files from Jinja2 templates
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://launchpad.net/%{sname}
+URL:            https://launchpad.net/%{sname}
 Source0:        https://files.pythonhosted.org/packages/source/r/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
