--- a/openstack/tooz/tooz.spec.j2
+++ b/openstack/tooz/tooz.spec.j2
@@ -8,7 +8,7 @@ Release:        0
 Summary:        Coordination library for distributed systems
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-URL:            http://docs.openstack.org/developer/tooz/
+URL:            https://docs.openstack.org/developer/tooz/
 Source0:        https://files.pythonhosted.org/packages/source/t/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  memcached
 BuildRequires:  openstack-macros
