--- a/openstack/zaqar-tempest-plugin/zaqar-tempest-plugin.spec.j2
+++ b/openstack/zaqar-tempest-plugin/zaqar-tempest-plugin.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'zaqar-tempest-plugin' %}
-{% set source = fetch_source('http://tarballs.openstack.org/zaqar-tempest-plugin/zaqar-tempest-plugin-master.tar.gz') %}
+{% set source = fetch_source('https://tarballs.openstack.org/zaqar-tempest-plugin/zaqar-tempest-plugin-master.tar.gz') %}
 {% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
