Patch Pike to fix the monasca ui access issue
Patch in a fix for the access policy in monasca-ui.
Upstream request at https://review.openstack.org/#/c/569194

Change-Id: I8eb514fd60e9778c860f9c70f58331c9100110ac

--- a/openstack/monasca-ui/monasca-ui.spec.j2
+++ b/openstack/monasca-ui/monasca-ui.spec.j2
@@ -20,6 +20,7 @@ Url:            https://wiki.openstack.org/wiki/Monasca
 Source0:        {{ source|basename }}
 Patch1:         allow-raw-grafana-links.patch
 Patch2:         drilldown-dimensions.patch
+Patch3:         fixed-monasca-ui-access-issue.patch
 BuildRequires:  fdupes
 BuildRequires:  {{ py2pkg('horizon') }}
 BuildRequires:  openstack-macros
