--- a/openstack/pyghmi/pyghmi.spec.j2
+++ b/openstack/pyghmi/pyghmi.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'pyghmi' %}
-{% set upstream_version = upstream_version('1.0.44') %}
+{% set upstream_version = upstream_version('1.1.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -13,9 +13,9 @@ URL:            https://launchpad.net/{{ pypi_name }}
 Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('cryptography', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('pycrypto', py_versions=['py2', 'py3']) }}
-Requires:       {{ py2pkg('pycrypto')  }}
+Requires:       {{ py2pkg('cryptography')  }}
 BuildArch:      noarch
 %if 0%{?suse_version}
 Requires(post): update-alternatives
