keystonemiddleware: fix test dependency to cryptography
Change-Id: I78eb6e66b8677b6a38cd5e202483537e03339acc

--- a/openstack/keystonemiddleware/keystonemiddleware.spec.j2
+++ b/openstack/keystonemiddleware/keystonemiddleware.spec.j2
@@ -11,6 +11,7 @@ BuildRequires:  openssl
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('WebOb', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('WebTest', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('cryptography', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('keystoneauth1', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('python-keystoneclient', py_versions=['py2', 'py3']) }}
@@ -24,7 +25,6 @@ BuildRequires:  {{ py2pkg('oslo.serialization', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pycadf', py_versions=['py2', 'py3']) }}
-BuildRequires:  {{ py2pkg('pycrypto', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('python-memcached', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('requests-mock', py_versions=['py2', 'py3']) }}
